# web-history-search-rag

./: .gitignore  README.md  agent.py  embeddings.py  embeddings_compare.py  example3.py  faiss_advanced.py  faiss_medium.py  faiss_simple.py  main.py  perception.py  pyproject.toml
faiss_index/: doc_index_cache.json  metadata.json
web-history-extension/: README.md  requirements.txt
web-history-extension/backend/: action.py  agent.py  decision.py  memory.py  perception.py  server.py  tools.py
web-history-extension/extension/: background.js  content.js  highlight.css  manifest.json  popup.css  popup.html  popup.js
web-history-extension/faiss_index/: metadata.json  url_cache.json
